# mnn_correct

./: .gitignore  README.md  pyproject.toml
src/mnn_correct/: __init__.py  correct.py
src/mnn_correct/util/: __init__.py  helpers.py  wknn.py
tests/: test_init.py
