[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnn-correct"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "anndata>=0.9",
    "numpy>=1.23",
    "pandas>=1.5",
    "scanpy>=1.10",
    "scipy>=1.10",
    "scikit-learn>=1.1",
    "pynndescent>=0.5",
    "tqdm>=4.60",
    "torch",         # used by py_wknn for GPU detection
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnn_correct"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
required-version = ">=0.9.18"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.mypy]
python_version = "3.9"
strict = true
